[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

actix-web="4.0.0" 
actix = "0.12.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
geo = "0.18.0"
regex = "1.5.4"
dotenv = "0.15.0"
aws-config = "0.7.0"
aws-sdk-dynamodb = "0.7.0"
tokio-stream = "0.1.8"
serde = { version = "1.0.136", features = ["derive"]}